[AGAA] Fix typos [skip ci]

--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/Gradient Checking.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/Gradient Checking.html
@@ -49,7 +49,7 @@ Consiste en la estimación numérica de los gradientes, tal que:
 \end{align}
 
 <p>
-<img src="https://albamr09.github.io/public/assets/gradient_checking.png" alt="Grafica Gradient Checking" style="width:300px;height:250px;">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/gradient_checking.png" alt="Grafica Gradient Checking" style="width:300px;height:250px;">
 </p>
 </div>
   
