--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/NeuralNetworks/Anexo/Ejemplo de retropropagación.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/NeuralNetworks/Anexo/Ejemplo de retropropagación.html
@@ -155,7 +155,7 @@ El procedimiento se ilustra en la siguiente figura:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/backwards_propagation.svg" alt="Retropropagación" style="width:1000px;height:600px;">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/backwards_propagation.svg" alt="Retropropagación" style="width:1000px;height:600px;">
 </p>
 </div>
   
