--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/SVM/SVM.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/SVM/SVM.html
@@ -96,7 +96,7 @@ The <span id="SVM-Support Vector Machine"></span><strong id="Support Vector Mach
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/non_linear_boundary_SVM.png" alt="Non-Linear Boundary with SVM" style="transform: translate(28vw, 0%);">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/non_linear_boundary_SVM.png" alt="Non-Linear Boundary with SVM" style="transform: translate(28vw, 0%);">
 </p>
 
 <p>
@@ -406,7 +406,7 @@ It may be the case where you map your data to a very high dimensional space, but
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/complex_decision_boundary_svm.png" alt="Complex Desicion Boundary" style="transform:translate(22vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/complex_decision_boundary_svm.png" alt="Complex Desicion Boundary" style="transform:translate(22vw, 0)">
 </p>
 
 <p>
@@ -447,7 +447,7 @@ With the addition of \(\xi_i\) we are allowing some examples to have a functiona
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/soft_margin.svg" alt="Soft Margin Graphical Representation" style="witdth:500px; height:400px; transform: translate(22vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/soft_margin.svg" alt="Soft Margin Graphical Representation" style="witdth:500px; height:400px; transform: translate(22vw, 0)">
 </p>
 
 <div id="SVM-L1-Norm Soft Margin SVM-Outliers"><h3 id="Outliers" class="header"><a href="#SVM-L1-Norm Soft Margin SVM-Outliers">Outliers</a></h3></div>
@@ -457,7 +457,7 @@ This relaxation on the restriction upong the geometric margin also avoids the fo
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/outlier_svm.svg" alt="Outlier SVM" style="width:500px;height:400px;transform:translate(22vw,0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/outlier_svm.svg" alt="Outlier SVM" style="width:500px;height:400px;transform:translate(22vw,0)">
 </p>
 
 <p>
