--- a/src/Notes/DataScience/GoogleDataAnalyst/04. Process/Overcoming the Challenges of Insufficient Data.html
+++ b/src/Notes/DataScience/GoogleDataAnalyst/04. Process/Overcoming the Challenges of Insufficient Data.html
@@ -59,7 +59,7 @@ Common data errors:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/insufficient_data.png" alt="Insufficient Data" style="width:650px;height:450px;">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/insufficient_data.png" alt="Insufficient Data" style="width:650px;height:450px;">
 </p>
 
 <hr>
