--- a/src/Notes/DataScience/GoogleDataAnalyst/05. Analyze/Use JOINs to Aggregate Data in SQL.html
+++ b/src/Notes/DataScience/GoogleDataAnalyst/05. Analyze/Use JOINs to Aggregate Data in SQL.html
@@ -41,7 +41,7 @@ There are four general ways in which to conduct JOINs in SQL queries: INNER, LEF
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/join_types.png" alt="Join Types" style="width:550px;heigh:330px">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/join_types.png" alt="Join Types" style="width:550px;heigh:330px">
 </p>
 
 <div id="Use JOINs to Aggregate Data in SQL-INNER JOIN or JOIN"><h3 id="INNER JOIN or JOIN" class="header"><a href="#Use JOINs to Aggregate Data in SQL-INNER JOIN or JOIN">INNER JOIN or JOIN</a></h3></div>
