--- a/src/Notes/Math/Pre-Calculus/AGAAT/06_06.html
+++ b/src/Notes/Math/Pre-Calculus/AGAAT/06_06.html
@@ -102,7 +102,7 @@ If \(det(A) = 0\), then \(A^{−1}\) does not exist and \(A\) is a singular matr
 <div id="Solution of Linear Systems by Matrix Inverses-Solving Linear Systems Using Inverse Matrices"><h2 id="Solving Linear Systems Using Inverse Matrices" class="header"><a href="#Solution of Linear Systems by Matrix Inverses-Solving Linear Systems Using Inverse Matrices">Solving Linear Systems Using Inverse Matrices</a></h2></div>
 
 <p>
-To solve the matrix equation \(AX = B\), first see if \(A^{-1}\) exists. Assuming that it does, use the facts that \(A^{-1}A = IR and \)IX = X$.
+To solve the matrix equation \(AX = B\), first see if \(A^{-1}\) exists. Assuming that it does, use the facts that \(A^{-1}A = I\) and \(IX = X\).
 </p>
 
 \begin{align}
