--- a/src/Notes/WebDev/Spring/Hibernate/ManyToMany.html
+++ b/src/Notes/WebDev/Spring/Hibernate/ManyToMany.html
@@ -41,7 +41,7 @@ Here we demonstrate how to implement a many to many relationship between two ent
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/many_to_many.png" alt="Many To Many Relationship">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/many_to_many.png" alt="Many To Many Relationship">
 </p>
 
 <p>
