--- a/src/Notes/WebDev/Spring/MVC/Form Tags.html
+++ b/src/Notes/WebDev/Spring/MVC/Form Tags.html
@@ -53,7 +53,7 @@ Some examples are:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/list_form_tags.png" alt="List of Form Tags">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/list_form_tags.png" alt="List of Form Tags">
 </p>
 
 <div id="Form Tags-Reference Spring MVC Form Tags"><h2 id="Reference Spring MVC Form Tags" class="header"><a href="#Form Tags-Reference Spring MVC Form Tags">Reference Spring MVC Form Tags</a></h2></div>
