--- a/src/Notes/WebDev/Spring/Security/Java Configuration.html
+++ b/src/Notes/WebDev/Spring/Security/Java Configuration.html
@@ -117,7 +117,7 @@ Here is the correspondence with the <code>xml</code> servlet configuration file:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/servlet_config.png" alt="Servlet Configuration" style="width:800px">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/servlet_config.png" alt="Servlet Configuration" style="width:800px">
 </p>
 </div>
   
