--- a/src/Notes/WebDev/Spring/Spring Rest/JSON Data Binding.html
+++ b/src/Notes/WebDev/Spring/Spring Rest/JSON Data Binding.html
@@ -41,7 +41,7 @@ Data binding is the process of converting JSON data to a Java POJO (the conversi
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/json_data_binding.png" alt="JSON Data Binding">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/json_data_binding.png" alt="JSON Data Binding">
 </p>
 
 <p>
