--- a/src/Notes/WebDev/Spring/Spring Rest/POJOs as JSON.html
+++ b/src/Notes/WebDev/Spring/Spring Rest/POJOs as JSON.html
@@ -41,7 +41,7 @@ To test converting POJOs to JSON we are going to create a service that allows us
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/pojos_json.png" alt="List of Students Service" style="width: 700px">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/pojos_json.png" alt="List of Students Service" style="width: 700px">
 </p>
 
 <div id="POJOs as JSON-Create POJO"><h2 id="Create POJO" class="header"><a href="#POJOs as JSON-Create POJO">Create POJO</a></h2></div>
