--- a/src/Notes/WebDev/Spring/Spring Rest/Spring Rest Controller.html
+++ b/src/Notes/WebDev/Spring/Spring Rest/Spring Rest Controller.html
@@ -51,7 +51,7 @@ To exemplify how to set up a REST Controller in Spring we will create an applica
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/spring_rest_controller.png">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/spring_rest_controller.png">
 </p>
 
 <div id="Spring Rest Controller-Hello World-Configuration"><h3 id="Configuration" class="header"><a href="#Spring Rest Controller-Hello World-Configuration">Configuration</a></h3></div>
