--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/DimensionalityReduction/Dimensionality Reduction.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/DimensionalityReduction/Dimensionality Reduction.html
@@ -76,7 +76,7 @@ Given examples \(\{x^{(i)}\}_{i=1}^n\) where \(x^{(i)} \in \mathbb{R}^d\), we wa
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/dimensionality_reduction.png" alt="Dimensionality Reduction" style="transform:translate(22vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/dimensionality_reduction.png" alt="Dimensionality Reduction" style="transform:translate(22vw, 0)">
 </p>
 
 <p>
@@ -148,7 +148,7 @@ This projection is the closes point in the subspace to the point we are trying t
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/pca_projection.png" alt="Projection Onto Subspace" style="transform:translate(22vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/pca_projection.png" alt="Projection Onto Subspace" style="transform:translate(22vw, 0)">
 </p>
 
 <p>
@@ -157,11 +157,11 @@ is much bigger that if we choose the red line:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/larger_variance_projection.svg" alt="Larger Variance Projection" style="transform:translate(22vw,0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/larger_variance_projection.svg" alt="Larger Variance Projection" style="transform:translate(22vw,0)">
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/smaller_variance_projection.svg" alt="Smaller Variance Projection" style="transform:translate(22vw,0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/smaller_variance_projection.svg" alt="Smaller Variance Projection" style="transform:translate(22vw,0)">
 </p>
 
 <div id="Dimensionality Reduction-PCA-Represent the Subspace"><h3 id="Represent the Subspace" class="header"><a href="#Dimensionality Reduction-PCA-Represent the Subspace">Represent the Subspace</a></h3></div>
@@ -191,7 +191,7 @@ So, now our goal is to find a \(u\) that maximizes the variance across the \(n\)
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/projection_norm.svg" alt="Norm of the Projection" style="transform:translate(22vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/projection_norm.svg" alt="Norm of the Projection" style="transform:translate(22vw, 0)">
 </p>
 
 <p>
@@ -338,7 +338,7 @@ Find a subspace such that the projection of the points are as close to the origi
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/minimize_projection_distance.svg" alt="Minimize projection distances" style="transform:translate(22vw,0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/minimize_projection_distance.svg" alt="Minimize projection distances" style="transform:translate(22vw,0)">
 </p>
 
 <div id="Dimensionality Reduction-ICA"><h2 id="ICA" class="header"><a href="#Dimensionality Reduction-ICA">ICA</a></h2></div>
@@ -366,7 +366,7 @@ For example, given two speaker, what they say is represented as follows:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/intuition_speaker.svg" alt="Speaker wavepenghts">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/intuition_speaker.svg" alt="Speaker wavepenghts">
 </p>
 
 <p>
@@ -374,7 +374,7 @@ Meanwhile the recordings of the microphones are the following:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/intuition_microphone.svg" alt="Microphone wavepenghts">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/intuition_microphone.svg" alt="Microphone wavepenghts">
 </p>
 
 <p>
@@ -422,7 +422,7 @@ Suppose we are given a random variable \(X\) such that \(X ~ Unif [0,1]\), then 
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/pdf_uniform.svg" alt="Probability Density Function for Unirform Distribution">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/pdf_uniform.svg" alt="Probability Density Function for Unirform Distribution">
 </p>
 
 <p>
@@ -430,7 +430,7 @@ Let us define a new distribution as follows \(y=2x\), then the probability densi
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/half_pdf_uniform.svg" alt="Probability Density Function for Scaled Unirform Distribution">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/half_pdf_uniform.svg" alt="Probability Density Function for Scaled Unirform Distribution">
 </p>
 
 <p>
