--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/NeuralNetworks/Neural Networks.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/NeuralNetworks/Neural Networks.html
@@ -113,7 +113,7 @@ Linear part: we denote the linear part like \(z^{[i]}\), where \(i\) is the curr
 </li></ul>
   
 <p>
-  <img src="https://albamr09.github.io/public/assets/neuron.svg" alt="Linear Part Neuron Example" style="transform: translate(22vw, 0)">
+  <img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/neuron.svg" alt="Linear Part Neuron Example" style="transform: translate(22vw, 0)">
 </p>
 <ul>
 <li>
@@ -122,7 +122,7 @@ Activation part
 </li></ul>
   
 <p>
-  <img src="https://albamr09.github.io/public/assets/neuron_activation.svg" alt="Activation Part Neuron Example" style="transform: translate(22vw, 0)">
+  <img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/neuron_activation.svg" alt="Activation Part Neuron Example" style="transform: translate(22vw, 0)">
 </p>
 <ul>
 <li>
@@ -131,7 +131,7 @@ Activation part
 </li></ul>
   
 <p>
-  <img src="https://albamr09.github.io/public/assets/layer.svg" alt="Layer Example" style="transform: translate(22vw, 0)">
+  <img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/layer.svg" alt="Layer Example" style="transform: translate(22vw, 0)">
 </p>
 
 <div id="Neural Networks-Architecture-Algorithm"><h3 id="Algorithm" class="header"><a href="#Neural Networks-Architecture-Algorithm">Algorithm</a></h3></div>
@@ -160,7 +160,7 @@ The output layer will be different depending on the problem we are tackling. For
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/nn_multiclass.svg" alt="NN with Multiclass" style="transform: translate(7vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/nn_multiclass.svg" alt="NN with Multiclass" style="transform: translate(7vw, 0)">
 </p>
 
 <p>
@@ -174,7 +174,7 @@ The previous classifier allows for outputting multiples classes in the result, t
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/nn_multiclass_softmax.svg" alt="NN with Multiclass using Softmax" style="transform: translate(7vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/nn_multiclass_softmax.svg" alt="NN with Multiclass using Softmax" style="transform: translate(7vw, 0)">
 </p>
 
 <p>
@@ -188,7 +188,7 @@ On linear regression we do not want the activation function to be linear, becaus
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/relu.svg" alt="ReLu Function" style="transform: translate(14vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/relu.svg" alt="ReLu Function" style="transform: translate(14vw, 0)">
 </p>
 
 <div id="Neural Networks-Architecture-Output Layer-Loss Function"><h4 id="Loss Function" class="header"><a href="#Neural Networks-Architecture-Output Layer-Loss Function">Loss Function</a></h4></div>
@@ -340,7 +340,7 @@ Now we present a small example of how forward propagation works on neural networ
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/nn_forward_propagation.svg" alt="Forward Propagation Neural Network" style="width: 1000px">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/nn_forward_propagation.svg" alt="Forward Propagation Neural Network" style="width: 1000px">
 </p>
 
 <div id="Neural Networks-Optimization Problem"><h2 id="Optimization Problem" class="header"><a href="#Neural Networks-Optimization Problem">Optimization Problem</a></h2></div>
@@ -534,7 +534,7 @@ On the following image we show how to obtain the gradient of the first element o
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/backwards_propagation.svg" alt="Graphical Representation">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/backwards_propagation.svg" alt="Graphical Representation">
 </p>
 
 <div id="Neural Networks-Improving a Neural Network"><h2 id="Improving a Neural Network" class="header"><a href="#Neural Networks-Improving a Neural Network">Improving a Neural Network</a></h2></div>
@@ -546,7 +546,7 @@ Why do we need activation functions? Well, suppose you have the following networ
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/nn_no_activation_function.svg" alt="Neural Network Without Activation Function" style="transform: translate(22vw)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/nn_no_activation_function.svg" alt="Neural Network Without Activation Function" style="transform: translate(22vw)">
 </p>
 
 <p>
@@ -616,7 +616,7 @@ However when the values are on the extremes the gradient (slope) is very small, 
 </li></ul>
 </li></ul>
 <p>
-<img src="https://albamr09.github.io/public/assets/activation_function_sigmoid.svg" alt="Sigmoid Activation Function">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/activation_function_sigmoid.svg" alt="Sigmoid Activation Function">
 </p>
 
 <ul>
@@ -656,7 +656,7 @@ Suppose you have the following network, where the activation function is the ide
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/vanishing_exploding_gradients.svg" alt="Vanishing and Exploding Gradients" style="transform: translate(22vw, 0); margin: 5px">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/vanishing_exploding_gradients.svg" alt="Vanishing and Exploding Gradients" style="transform: translate(22vw, 0); margin: 5px">
 </p>
 
 <p>
@@ -722,7 +722,7 @@ Given a single neuron:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/initialize_weights.svg" alt="Weight Initialization" style="transform: translate(22vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/initialize_weights.svg" alt="Weight Initialization" style="transform: translate(22vw, 0)">
 </p>
 
 <p>
@@ -770,7 +770,7 @@ Mini Batch Gradient Descent is a trade off between batch gradient descent and st
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/mini_batch_vs_batch.png" alt="Mini Batch Gradient Descent VS Batch Gradient Descent" style="transform: translate(17vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/mini_batch_vs_batch.png" alt="Mini Batch Gradient Descent VS Batch Gradient Descent" style="transform: translate(17vw, 0)">
 </p>
 
 <p>
@@ -784,7 +784,7 @@ This algorithm combines Gradient Descent and momentum. Suppose you have the foll
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/gradient_descent.svg" alt="Gradient Descent" style="transform: translate(22vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/gradient_descent.svg" alt="Gradient Descent" style="transform: translate(22vw, 0)">
 </p>
 
 <p>
@@ -800,7 +800,7 @@ Horizontal axis: its value it's maintained because the past and present gradient
 
 </li></ul>
 <p>
-<img src="https://albamr09.github.io/public/assets/momentum_gradient_descent.svg" alt="Gradient Descent wiht Momentum" style="transform: translate(22vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/momentum_gradient_descent.svg" alt="Gradient Descent wiht Momentum" style="transform: translate(22vw, 0)">
 </p>
 
 <p>
