--- a/src/Notes/DataScience/Other/UKF/index.html
+++ b/src/Notes/DataScience/Other/UKF/index.html
@@ -125,7 +125,7 @@ which means \(\Delta x^{(i)}\) is the i-th column of the covariance matrix multi
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/sigma_points_1.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/sigma_points_1.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
 </p>
 
 <p>
@@ -145,7 +145,7 @@ Such that we obtain:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/sigma_points_2.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/sigma_points_2.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
 </p>
 
 <p>
@@ -153,7 +153,7 @@ From the following image we can see the \(4\) points we obtained seem to be a go
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/sigma_points_3.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/sigma_points_3.png" alt="Sigma Points" style="transform: translate(30vw, 0)">
 </p>
 
 <p>
@@ -175,7 +175,7 @@ Such that we have the following situation:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/transformed_sigma_points.png" alt="Transformed Sigma Points" style="transform: translate(30vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/transformed_sigma_points.png" alt="Transformed Sigma Points" style="transform: translate(30vw, 0)">
 </p>
 
 <p>
@@ -199,7 +199,7 @@ And so, we obtain the following estimated mean:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/mean_transformed_sigma_points.png" alt="Mean of Transformed Sigma Points" style="transform: translate(30vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/mean_transformed_sigma_points.png" alt="Mean of Transformed Sigma Points" style="transform: translate(30vw, 0)">
 </p>
 <div id="Unscented Kalman Filter-Selecting less points to sample-Covariance approximation"><h3 id="Covariance approximation" class="header"><a href="#Unscented Kalman Filter-Selecting less points to sample-Covariance approximation">Covariance approximation</a></h3></div>
 
@@ -220,7 +220,7 @@ Which given us the following estimated covariance:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/covariance_transformed_sigma_points.png" alt="Covariance of Transformed Sigma Points" style="transform: translate(30vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/covariance_transformed_sigma_points.png" alt="Covariance of Transformed Sigma Points" style="transform: translate(30vw, 0)">
 </p>
 
 <div id="Unscented Kalman Filter-General Unscented Transformation"><h2 id="General Unscented Transformation" class="header"><a href="#Unscented Kalman Filter-General Unscented Transformation">General Unscented Transformation</a></h2></div>
