--- a/src/Notes/WebDev/Spring/Dependency Injection/Dependency Injection.html
+++ b/src/Notes/WebDev/Spring/Dependency Injection/Dependency Injection.html
@@ -41,7 +41,7 @@ The dependencies of the objects are managed by the Spring container object facto
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/dependency_injection.png" alt="Dependency Injection" style="width:700px;height:400px;">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/dependency_injection.png" alt="Dependency Injection" style="width:700px;height:400px;">
 </p>
 
 <p>
