--- a/src/Notes/WebDev/Spring/MVC/index.html
+++ b/src/Notes/WebDev/Spring/MVC/index.html
@@ -41,7 +41,7 @@
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/mvc_pattern.png" alt="MVC Pattern" style="transform:translate(15vw, 0)">
+<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/mvc_pattern.png" alt="MVC Pattern" style="transform:translate(15vw, 0)">
 </p>
 
 <ul>
