[AAII] Add notes for T01_02 bootstrapping and T01_03 bagging [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -43,10 +43,10 @@
 <a href="T1/01_bias_variance_tradeoff.html">Bias/Variance Tradeoff</a>
 
 </li><li>
-Boosting
+<a href="T1/02_bootstrapping.html">Bootstrapping</a>
 
 </li><li>
-Bagging
+<a href="T1/03_bagging.html">Bagging</a>
 
 </li><li>
 Random Forests
