Update documents.json [skip ci]

--- a/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/NeuralNetworks/Anexo/index.html
+++ b/src/Notes/DataScience/(DS0001)_MLStanfordCoursera/NeuralNetworks/Anexo/index.html
@@ -59,7 +59,7 @@ Para crear una red neuronal que permita trabajar con \(c\) clases lo que hacemos
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/nn_ejemplo_multi.svg" alt="Ejemplo Red Neuronal Clasificación Múltiple" style="width:950px;height:550px">
+<img src="https://albamr09.github.io/public/assets/nn_ejemplo_multi.svg" alt="Ejemplo Red Neuronal Clasificación Múltiple" style="width:950px;height:550px">
 </p>
 
 <p>
@@ -168,7 +168,7 @@ Si generalizamos esto a \(m\) ejemplos tenemos que la salida de cada capa es una
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/nn_multi_ejemplos.svg" alt="Red Neuronal con varios ejemplos" style="width:800px;height:600px">
+<img src="https://albamr09.github.io/public/assets/nn_multi_ejemplos.svg" alt="Red Neuronal con varios ejemplos" style="width:800px;height:600px">
 </p><hr>
 <p></p>
 
@@ -281,7 +281,7 @@ Función de activación sigmoide para clasificación o linear para regresión
 <div id="Anexo-Algoritmo-Pseudocódigo"><h3 id="Pseudocódigo" class="header"><a href="#Anexo-Algoritmo-Pseudocódigo">Pseudocódigo</a></h3></div>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/nn_pseudocodigo.png" alt="Pseudocódigo Red Neuronal">
+<img src="https://albamr09.github.io/public/assets/nn_pseudocodigo.png" alt="Pseudocódigo Red Neuronal">
 </p>
 </div>
   
