--- a/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/KalmanFilter/Kalman Filter.html
+++ b/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/KalmanFilter/Kalman Filter.html
@@ -83,7 +83,7 @@ Suppose your position on a 2D plane is given by the black dot:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/intro_example_1.png" alt="Example" style="transform: translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/intro_example_1.png" alt="Example" style="transform: translate(30vw,0)">
 </p>
 
 <p>
@@ -91,7 +91,7 @@ Let's say you get your estimate as to where you are, inferred from a certain con
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/intro_example_2.png" alt="Example" style="transform: translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/intro_example_2.png" alt="Example" style="transform: translate(30vw,0)">
 </p>
 
 <p>
@@ -99,7 +99,7 @@ This is will be the prediction step. Now suppose you get an observation about th
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/intro_example_3.png" alt="Example" style="transform: translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/intro_example_3.png" alt="Example" style="transform: translate(30vw,0)">
 </p>
 
 <p>
@@ -107,8 +107,8 @@ So now we can perform our new state estimate by combining by the means of a weig
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/intro_example_4.png" alt="Example" style="transform: translate(17vw,0)">
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/intro_example_5.png" alt="Example" style="transform: translate(27vw,0)">
+<img src="https://albamr09.github.io/public/assets/intro_example_4.png" alt="Example" style="transform: translate(17vw,0)">
+<img src="https://albamr09.github.io/public/assets/intro_example_5.png" alt="Example" style="transform: translate(27vw,0)">
 </p>
 
 <p>
@@ -238,7 +238,7 @@ As we have said, we are assuming everything is Gaussian. Up until now we have de
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/everythin_gaussian_1.png" alt="Gaussian World" style="transform:translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/everythin_gaussian_1.png" alt="Gaussian World" style="transform:translate(30vw, 0)">
 </p>
 
 <p>
@@ -335,7 +335,7 @@ Therefore we have shown that everything stays Gaussian:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/all_gaussian.png" alt="Everything Stays Gaussian" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/all_gaussian.png" alt="Everything Stays Gaussian" style="transform:translate(30vw,0)">
 </p>
 
 <div id="Kalman Filter-Representing the Belief"><h2 id="Representing the Belief" class="header"><a href="#Kalman Filter-Representing the Belief">Representing the Belief</a></h2></div>
@@ -370,7 +370,7 @@ Inputs:
 </li></ul>
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/kalman_filter_algorithm.png" alt="Kalman Filter Algorithm" style="transform:translate(30vw,0)">
+<img src="https://albamr09.github.io/public/assets/kalman_filter_algorithm.png" alt="Kalman Filter Algorithm" style="transform:translate(30vw,0)">
 </p>
 
 <p>
