--- a/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/Models/Motion Model.html
+++ b/src/Notes/DataScience/(DS0003)_Online_Training_Mobile_Robotics/Models/Motion Model.html
@@ -45,7 +45,7 @@ The motion of the system will always contain uncertainty, because it does not mo
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/actual_path.png" alt="Actual System Path" style="transform:translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/actual_path.png" alt="Actual System Path" style="transform:translate(30vw, 0)">
 </p>
 
 <p>
@@ -53,7 +53,7 @@ However the internal estimate of the system yields the following result:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/estimated_path.png" alt="Estimated System Path" style="transform:translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/estimated_path.png" alt="Estimated System Path" style="transform:translate(30vw, 0)">
 </p>
 
 <p>
@@ -105,7 +105,7 @@ Some errors that cause wrong movement estimations are the following:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/motion_model_errors.png" alt="Causes for Error on Motion Estimation" style="transform: translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/motion_model_errors.png" alt="Causes for Error on Motion Estimation" style="transform: translate(30vw, 0)">
 </p>
 
 <p>
@@ -139,7 +139,7 @@ Each part is illustrated in the following image:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/odomery_motion_model.png" alt="Odometry Motion Model" style="transform:translate(30vw, 0)">
+<img src="https://albamr09.github.io/public/assets/odomery_motion_model.png" alt="Odometry Motion Model" style="transform:translate(30vw, 0)">
 </p>
 </div>
   
