--- a/src/Notes/WebDev/Spring/Hibernate/index.html
+++ b/src/Notes/WebDev/Spring/Hibernate/index.html
@@ -57,7 +57,7 @@ The developer defines a mapping between a <code>Java</code> class and a database
 </li></ul>
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/orm_hibernate.png" alt="ORM in Hibernate" style="width:800px">
+<img src="https://albamr09.github.io/public/assets/orm_hibernate.png" alt="ORM in Hibernate" style="width:800px">
 </p>
 
 <p>
@@ -65,7 +65,7 @@ Hibernate uses <code>JDBC</code> for all database communications:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/hibernate_jdbc.png" alt="Relationship Hibernate JDBC" style="width:800px">
+<img src="https://albamr09.github.io/public/assets/hibernate_jdbc.png" alt="Relationship Hibernate JDBC" style="width:800px">
 </p>
 </div>
   
