--- a/src/Notes/WebDev/Spring/Maven/POM File Structure.html
+++ b/src/Notes/WebDev/Spring/Maven/POM File Structure.html
@@ -52,7 +52,7 @@ Plug-ins: additional custom tasks to run (JUnit tests, reports, etc)
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/pom_file_structure.png" alt="Example of POM File" style="width: 800px">
+<img src="https://albamr09.github.io/public/assets/pom_file_structure.png" alt="Example of POM File" style="width: 800px">
 </p>
 
 <div id="POM File Structure-Project Coordinates"><h2 id="Project Coordinates" class="header"><a href="#POM File Structure-Project Coordinates">Project Coordinates</a></h2></div>
@@ -62,7 +62,7 @@ Project coordinates uniquely identify a project:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/project_coordinates.png" alt="Project Coordinates Example">
+<img src="https://albamr09.github.io/public/assets/project_coordinates.png" alt="Project Coordinates Example">
 </p>
 
 <p>
