--- a/src/Notes/DataScience/(DS0002)_AIRobotics/PIDControl/PIDControl.html
+++ b/src/Notes/DataScience/(DS0002)_AIRobotics/PIDControl/PIDControl.html
@@ -109,7 +109,7 @@ Note that with this approach we will eventually overshoot when reaching for the 
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/overshoot_trajectory.png" alt="Robot overshoots trajectory">
+<img src="https://albamr09.github.io/public/assets/overshoot_trajectory.png" alt="Robot overshoots trajectory">
 </p>
 
 <div id="PID Control-PD Control"><h2 id="PD Control" class="header"><a href="#PID Control-PD Control">PD Control</a></h2></div>
