--- a/src/Notes/DataScience/GoogleDataAnalyst/03. Prepare/Collecting Data.html
+++ b/src/Notes/DataScience/GoogleDataAnalyst/03. Prepare/Collecting Data.html
@@ -71,7 +71,7 @@ Select the right data type
 </li></ul>
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/collect_data.png" alt="Data Collection Considerations" style="width:550px;height:500px">
+<img src="https://albamr09.github.io/public/assets/collect_data.png" alt="Data Collection Considerations" style="width:550px;height:500px">
 </p>
 
 <hr>
