--- a/src/Notes/WebDev/Spring/AOP/AfterReturning Advice.html
+++ b/src/Notes/WebDev/Spring/AOP/AfterReturning Advice.html
@@ -45,7 +45,7 @@ The flow of this advice is the following:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/after_returning_interaction.png" alt="After Returning Interaction" style="width: 750px">
+<img src="https://albamr09.github.io/public/assets/after_returning_interaction.png" alt="After Returning Interaction" style="width: 750px">
 </p>
 
 <p>
