--- a/src/Notes/WebDev/Spring/Bean Scopes/Scope.html
+++ b/src/Notes/WebDev/Spring/Bean Scopes/Scope.html
@@ -75,7 +75,7 @@ Other scopes are:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/bean_scopes.png" alt="Bean Scopes" style="width:700px;heigh:500px;">
+<img src="https://albamr09.github.io/public/assets/bean_scopes.png" alt="Bean Scopes" style="width:700px;heigh:500px;">
 </p>
 
 <ul>
