--- a/src/Notes/WebDev/Spring/MVC/Read HTML Form Data.html
+++ b/src/Notes/WebDev/Spring/MVC/Read HTML Form Data.html
@@ -46,7 +46,7 @@ When the user accesses the URL <code>/showForm</code>, the browser will send a r
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/read_form_data.png" alt="Read Form Data" style="width:700px;height:175px">
+<img src="https://albamr09.github.io/public/assets/read_form_data.png" alt="Read Form Data" style="width:700px;height:175px">
 </p>
  
 <ul>
@@ -55,7 +55,7 @@ When the user hits submit on the form the action <code>/processForm</code> is pa
 
 </li></ul>
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/read_from_html.png" alt="Read Form Data" style="width:700px;height:150px">
+<img src="https://albamr09.github.io/public/assets/read_from_html.png" alt="Read Form Data" style="width:700px;height:150px">
 </p>
 
 <div id="Read HTML Form Data-Controller"><h2 id="Controller" class="header"><a href="#Read HTML Form Data-Controller">Controller</a></h2></div>
