--- a/src/Notes/WebDev/Spring/Maven/Additional Repositories.html
+++ b/src/Notes/WebDev/Spring/Maven/Additional Repositories.html
@@ -41,7 +41,7 @@
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/additional_repositories.png" alt="Additional Repositories" style="width: 800px">
+<img src="https://albamr09.github.io/public/assets/additional_repositories.png" alt="Additional Repositories" style="width: 800px">
 </p>
 </div>
   
