--- a/src/Notes/WebDev/Spring/Security/JDBC Database Authentication.html
+++ b/src/Notes/WebDev/Spring/Security/JDBC Database Authentication.html
@@ -54,7 +54,7 @@ The tables we have to create are the following:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/spring_jdbc_tables.png" alt="Database Tables" style="width: 700px">
+<img src="https://albamr09.github.io/public/assets/spring_jdbc_tables.png" alt="Database Tables" style="width: 700px">
 </p>
 
 <div id="JDBC Database Authentication-Set Up Database-Password Encryption"><h3 id="Password Encryption" class="header"><a href="#JDBC Database Authentication-Set Up Database-Password Encryption">Password Encryption</a></h3></div>
