--- a/src/Notes/WebDev/Spring/SpringBoot/JPA.html
+++ b/src/Notes/WebDev/Spring/SpringBoot/JPA.html
@@ -49,7 +49,7 @@ Comparing <code>Hibernate</code> to <code>JPA</code>:
 </p>
 
 <p>
-<img src="/home/alba/Documents/repos/NoteWorld/VimWiki/public/assets/jpa_vs_hibernate.png" alt="Comparing JPA and Hibernate">
+<img src="https://albamr09.github.io/public/assets/jpa_vs_hibernate.png" alt="Comparing JPA and Hibernate">
 </p>
 
 <hr>
