--- a/src/Notes/Master/2C_2C/DL/index.html
+++ b/src/Notes/Master/2C_2C/DL/index.html
@@ -1,7 +1,7 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/style.css">
-    <title>index</title>
+    <title>Deep Learning</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -28,6 +28,19 @@
     </div>
     <hr>
     <div class="content">
+<p>
+<a href="../../index.html">Back</a>
+</p>
+
+<div id="Deep Learning"><h1 id="Deep Learning" class="header"><a href="#Deep Learning">Deep Learning</a></h1></div>
+
+<hr>
+
+<ol>
+<li>
+<a href="01_foundation.html">Fundamentos de las Redes Neuronales Profundas</a>
+
+</li></ol>
 </div>
   
 
