[AAII] Finish notes for T01_04 Random Forests [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/T1/03_bagging.html
+++ b/src/Notes/Master/2C_2C/AAII/T1/03_bagging.html
@@ -135,7 +135,7 @@ In the case of bagging regression trees, we can record the total amount that the
 </p>
 
 <p>
-For classification trees, we can add up the total amount that the \(Gini index\) is decreased by splits over a given predictor, averaged over all \(B\) trees.
+For classification trees, we can add up the total amount that the Gini index is decreased by splits over a given predictor, averaged over all \(B\) trees.
 </p>
 </div>
   
