--- a/src/Notes/Master/2C_2C/AAII/index.html
+++ b/src/Notes/Master/2C_2C/AAII/index.html
@@ -49,7 +49,7 @@
 <a href="T1/03_bagging.html">Bagging</a>
 
 </li><li>
-Random Forests
+<a href="T1/04_random_forests.html">Random Forests</a>
 
 </li></ol>
 </div>
