[AGAA] Add 06_07 [skip ci]

--- a/src/Notes/Master/2C_2C/AAII/T1/02_bootstrapping.html
+++ b/src/Notes/Master/2C_2C/AAII/T1/02_bootstrapping.html
@@ -1,7 +1,7 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
     <link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/style.css">
-    <title>A Graphical Approach to Algebra and Trigonometry</title>
+    <title>Bootstrapping</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -29,55 +29,37 @@
     <hr>
     <div class="content">
 <p>
-<a href="../../../index.html">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
-<div id="A Graphical Approach to Algebra and Trigonometry"><h1 id="A Graphical Approach to Algebra and Trigonometry" class="header"><a href="#A Graphical Approach to Algebra and Trigonometry">A Graphical Approach to Algebra and Trigonometry</a></h1></div>
+<div id="Bootstrapping"><h1 id="Bootstrapping" class="header"><a href="#Bootstrapping">Bootstrapping</a></h1></div>
 
 <hr>
 
-<ol>
-<li>
-Linear Functions, Equations and Inequalities
+<p>
+Bootstrapping is a resampling technique used in statistics to estimate the sampling distribution of a statistic by sampling with replacement from the original dataset. The method is particularly useful when analytical methods for deriving the sampling distribution are complex or unavailable.
+</p>
 
-</li><li>
-Analysis of Graphs of Functions
-
-</li><li>
-Polynomial Functions
-
-</li><li>
-Rational, Power and Root Functions
-
-</li><li>
-Inverse, Exponential and Logarithmic Functions
-
-</li><li>
-Systems and Matrices
+<p>
+Here's a breakdown of the bootstrapping process:
+</p>
 
 <ol>
 <li>
-Systems of Equations
+<span id="Bootstrapping-Sampling with Replacement"></span><strong id="Sampling with Replacement">Sampling with Replacement</strong>: From the original dataset, <span id="Bootstrapping-randomly draw"></span><strong id="randomly draw">randomly draw</strong> \(n\) <span id="Bootstrapping-samples with replacement"></span><strong id="samples with replacement">samples with replacement</strong>. This means that each observation has an equal chance of being selected for the sample, and an observation may be selected multiple times.
 
 </li><li>
-<a href="06_02.html">Solutions of Linear Systems in Three Variables</a>
+<span id="Bootstrapping-Sample Statistics"></span><strong id="Sample Statistics">Sample Statistics</strong>: Calculate the statistic of interest (e.g., mean, median, standard deviation, regression coefficient) on each bootstrapped sample. 
 
 </li><li>
-<a href="06_03.html">Solution of Linear Systems by Row Transformations</a>
+<span id="Bootstrapping-Repeat"></span><strong id="Repeat">Repeat</strong>: Repeat steps \(2\) and \(3\) a large number of times to generate multiple bootstrap samples and their corresponding statistics.
 
 </li><li>
-<a href="06_04.html">Matrix Properties and Operations</a>
+<span id="Bootstrapping-Estimate Sampling Distribution"></span><strong id="Estimate Sampling Distribution">Estimate Sampling Distribution</strong>: With the collection of bootstrap statistics, you can estimate the sampling distribution of the statistic of interest. This empirical distribution approximates the true sampling distribution of the statistic, providing information about its variability and uncertainty.
 
 </li><li>
-<a href="06_05.html">Determinants and Cramer's Rule</a>
+<span id="Bootstrapping-Inference"></span><strong id="Inference">Inference</strong>: Use the estimated sampling distribution to make inferences about the population parameter or to construct confidence intervals.
 
-</li><li>
-<a href="06_06.html">Solution of Linear Systems by Matrix Inverses</a>
-
-</li><li>
-<a href="06_07.html">Systems of Inequalities and Linear Programming</a>
-
-</li></ol>
 </li></ol>
 </div>
   
